# QtRag

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cli/: CMakeLists.txt
cli/src/: main.cpp
client/: CMakeLists.txt
client/src/: CMakeLists.txt  client_resources.qrc  main.cpp
client/src/controllers/: CMakeLists.txt  session_controller.cpp  session_controller.h
client/src/models/: CMakeLists.txt  document_record.h  message_record.h  session_record.h  setting_record.h
client/src/storage/: CMakeLists.txt  database_manager.cpp  database_manager.h
client/src/storage/repositories/: CMakeLists.txt  document_repository.cpp  document_repository.h  message_repository.cpp  message_repository.h  session_repository.cpp  session_repository.h  setting_repository.cpp  setting_repository.h  settings_repository.cpp  settings_repository.h
client/src/ui/: CMakeLists.txt  app_style.cpp  app_style.h  main_window.cpp  main_window.h  notifier.cpp  notifier.h
client/src/ui/pages/: CMakeLists.txt  document_page.cpp  document_page.h  reference_panel.cpp  reference_panel.h  settings_dialog.cpp  settings_dialog.h
docs/assets/: architecture.vsdx
server/: CMakeLists.txt
server/config/: config.json  config.openai.example.json  config.siliconflow.example.json
server/src/: CMakeLists.txt  main.cpp
server/src/adapters/: CMakeLists.txt  embedding_client.cpp  embedding_client.h  http_transport.cpp  http_transport.h  llm_client.cpp  llm_client.h  provider_factory.cpp  provider_factory.h
server/src/config/: CMakeLists.txt  app_config.cpp  app_config.h
server/src/core/: CMakeLists.txt  chunker.cpp  chunker.h  in_memory_vector_store.cpp  in_memory_vector_store.h  prompt_builder.cpp  prompt_builder.h  retriever.cpp  retriever.h
server/src/http/: CMakeLists.txt  http_server.cpp  http_server.h  router.cpp  router.h
server/src/models/: CMakeLists.txt  chunk_record.h  document_record.h  embedding_record.h
server/src/storage/: CMakeLists.txt  sqllite_store.cpp  sqllite_store.h
server/src/storage/repositories/: CMakeLists.txt  chunk_repository.cpp  chunk_repository.h  document_repository.cpp  document_repository.h  embedding_repository.cpp  embedding_repository.h
server/src/utils/: CMakeLists.txt  logger.cpp  logger.h
